--- a/MiniShopApp/Pages/Orders/OrderIndex.razor
+++ b/MiniShopApp/Pages/Orders/OrderIndex.razor
@@ -1,4 +1,5 @@
 ﻿@page "/order/ordering/{userId:long?}"
+@using MiniShopApp.Shared.Dialogs
 @layout MainLayout2
 @rendermode InteractiveServer
 
@@ -6,14 +7,9 @@
 @* <p>@customerId</p> *@
 @if (IsLoading == true)
     {
-         <div class="text-center top-50 align-middle">
-            <div class="spinner-border" role="status">
-                <span class="visually-hidden">Loading...</span>
-            </div>
-    </div>
+    <MudProgressLinear Color="Color.Info" Indeterminate="true" />
 }
-else
-{
+
     <div class="my-2">
 
 
@@ -49,17 +45,23 @@ else
                         <h5 class="card-text text-danger">@String.Format("${0:N2}", list?.Price)</h5>
                     </div>
                     <div class="d-flex justify-content-between mx-2 my-2">
+                        @if (list!.IsActive == false)
+                        {
+                            <MudText Typo="Typo.body2" Color="Color.Secondary" Class="text-center bg-dark bg-opacity-75 w-100 p-2">Not Available</MudText>
 
+                        }
+                        else
+                        {
                         <MudIconButton Icon="@Icons.Material.Outlined.RemoveCircleOutline" OnClick="@(() => DescreasProduct(list!.Id))" Color="Color.Info" Size="Size.Medium" />
                         <MudIconButton Icon="@Icons.Material.Outlined.AddCircleOutline" OnClick="@(() => AddProduct(list!.Id))" Color="Color.Primary" Size="Size.Medium" />
-
+                        }
                     </div>
                 </div>
 
             </div>
         }
     </div>
-}
+
 
 
 <div class="pt-5">
