--- a/MiniShopApp/Pages/Orders/OrderViewPage.razor
+++ b/MiniShopApp/Pages/Orders/OrderViewPage.razor
@@ -112,7 +112,7 @@
         <RowTemplate>
             <MudTd @key="context.Id" DataLabel="Order ID"><MudIcon Icon="@Icons.Material.Filled.ArrowDropDown" /> @context.CreatedDT?.ToString("dd/MMM/yy")</MudTd>
             <MudTd DataLabel="CustomerId">@context.CustomerId</MudTd>
-            <MudTd DataLabel="FirstName">@context.FirstName</MudTd>
+            <MudTd DataLabel="FirstName">@(context.FirstName ?? context.CustomerType)</MudTd>
             <MudTd DataLabel="TableNumber">@context.TableNumber</MudTd>
             <MudTd DataLabel="ItemCount">@context.ItemCount</MudTd>
             <MudTd DataLabel="SubPrice">@context.SubPrice?.ToString("c2")</MudTd>
