--- a/MiniShopApp/Shared/DropdownActions/DropdownOrder.razor
+++ b/MiniShopApp/Shared/DropdownActions/DropdownOrder.razor
@@ -1,14 +1,18 @@
 ﻿
-        <MudMenu Label="Edit" Variant="Variant.Text" EndIcon="@Icons.Material.Filled.KeyboardArrowDown">
-            <MudMenuItem Label="Print Receipt" Icon="@Icons.Material.Outlined.Print" OnClick="OnClickPrint" />
-            <MudMenuItem Disabled Icon="@Icons.Material.Outlined.Edit" OnClick="OnClickModify" Label="Modify Order" />
-            <MudMenuItem Disabled Icon="@Icons.Material.Outlined.Delete" OnClick="OnClickDelete" Label="Delete Order" />
-        </MudMenu>
 
+<MudMenu Label="Edit" Variant="Variant.Text" EndIcon="@Icons.Material.Filled.KeyboardArrowDown">
+    <MudMenuItem Label="Print Receipt" Icon="@Icons.Material.Outlined.Print" OnClick="OnClickPrint" />
+    <MudMenuItem Icon="@Icons.Material.Outlined.MonetizationOn" OnClick="OnClickModifyPaid" Label="Confirm Paid" />
+    <MudMenuItem Icon="@Icons.Material.Outlined.MoneyOff" OnClick="OnClickModifyCancel" Label="Cancel Order" />
+    <MudMenuItem Disabled Icon="@Icons.Material.Outlined.Edit" OnClick="OnClickModify" Label="Modify Order" />
+    <MudMenuItem Disabled Icon="@Icons.Material.Outlined.Delete" OnClick="OnClickDelete" Label="Delete Order" />
+</MudMenu>
 
 @code {
 
     [Parameter] public EventCallback ClickPrint{ get; set; }
+    [Parameter] public EventCallback ClickModifyPaid{ get; set; }
+    [Parameter] public EventCallback ClickModifyCancel{ get; set; }
     [Parameter] public EventCallback ClickModify{ get; set; }
     [Parameter] public EventCallback ClickDelete{ get; set; }
     async Task OnClickPrint()
@@ -20,6 +24,16 @@
     {
         if (ClickModify.HasDelegate)
             await ClickModify.InvokeAsync();
+    }
+    async Task OnClickModifyPaid()
+    {
+        if (ClickModifyPaid.HasDelegate)
+            await ClickModifyPaid.InvokeAsync();
+    }
+    async Task OnClickModifyCancel()
+    {
+        if (ClickModifyCancel.HasDelegate)
+            await ClickModifyCancel.InvokeAsync();
     }
     async Task OnClickDelete()
     {
